--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=nurrrti1_MYCALCULATOR
 sonar.organization=nurrrti1
-
+sonar.coverageReportPaths=test-reports/coverage.xml
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=MYCALCULATOR
 #sonar.projectVersion=1.0
