--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,14 @@
 sonar.projectKey=nurrrti1_MYCALCULATOR
- sonar.organization=nurrrti1
- sonar.coverageReportPaths=test-reports/coverage.xml
- # This is the name and version displayed in the SonarCloud UI.
- #sonar.projectName=MYCALCULATOR
- #sonar.projectVersion=1.0
+sonar.organization=nurrrti1
+sonar.java.test.binaries=/src
+sonar.java.binaries=/src
+sonar.coverageReportPaths=test-reports/coverage.xml
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=MYCALCULATOR
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
