--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,10 @@
 sonar.projectKey=nurrrti1_MYCALCULATOR
 sonar.organization=nurrrti1
+sonar.java.test.binaries=src/
+sonar.java.binaries=src/
+sonar.coverageReportPaths=test-reports/coverage.xml
+#sonar.testExecutionReportPaths=test-exec/exec.xml
+sonar.sources=src/com/company/JavaCalculator.java
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=MYCALCULATOR
 #sonar.projectVersion=1.0
