--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
 sonar.projectKey=nurrrti1_MYCALCULATOR
 sonar.organization=nurrrti1
-sonar.java.test.binaries=src/
 sonar.java.binaries=src/
+sonar.sources=src/
 sonar.coverageReportPaths=test-reports/coverage.xml
-#sonar.testExecutionReportPaths=test-exec/exec.xml
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=MYCALCULATOR
 #sonar.projectVersion=1.0
