--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=nurrrti1_MYCALCULATOR
 sonar.organization=nurrrti1
 sonar.java.binaries=src/
-sonar.sources=src/
+sonar.sources=src/JavaCalculator.java
 sonar.coverageReportPaths=test-reports/coverage.xml
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=MYCALCULATOR
