--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=nurrrti1_MYCALCULATOR
 sonar.organization=nurrrti1
-sonar.java.binaries=src/
+sonar.java.binaries=out/production/Javacalculator/com/company/
 sonar.sources=src/JavaCalculator.java
 sonar.coverageReportPaths=test-reports/coverage.xml
 # This is the name and version displayed in the SonarCloud UI.
